--- a/task/App/Views/base.html
+++ b/task/App/Views/base.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 	<nav>
-		<a href="/task/public">Home</a>
 		<a href="/task/public/Admin/Category/index">Manage Categorys</a>
 		<a href="/task/public/Admin/Product/index">Manage Products</a>
-		<a href="/task/public/cms/index">Manage CMS</a>
+		<a href="/task/public/Admin/cms/index">Manage CMS</a>
+		<a href="/task/public/Admin/login/logout">Logout</a>
 	</nav>
 	{% block body %}
 	{% endblock %}
