--- a/task/App/Views/admin/productlist.html
+++ b/task/App/Views/admin/productlist.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block body %}
-	<h1>Category List</h1>
+	<h1>Product List</h1>
 	<a href="/task/public/Admin/Product/addproduct">Add Product</a>
 	<br><br>
 	<table border="2">
@@ -17,7 +17,7 @@
 	<tr>
 		<td>{{Post.productName}}</td>
 		<td>{{Post.urlKey}}</td>
-		<td>{{Post.image}}</td>
+		<td><img src="../../../file/{{Post.image}}" height='50px'width='50px'/></td>
 		<td>{{Post.status}}</td>
         <td>{{Post.description}}</td>
         <td>{{Post.price}}</td>
