--- a/task/App/Views/admin/categorylist.html
+++ b/task/App/Views/admin/categorylist.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
 	<h1>Category List</h1>
-	<a href="/task/public/Admin/Category/add">Add Category</a>
+	<a href="/task/public/Admin/Category/add" class="navbar-brand">Add Category</a>
 	<br><br>
-	<table border="2">
+	<table class="table table-striped" >
 		<tr>
 			<th>CategoryName</th>
 			<th>urlKey</th>
