--- a/task/App/Views/admin/productlist.html
+++ b/task/App/Views/admin/productlist.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block body %}
 	<h1>Product List</h1>
-	<a href="/task/public/Admin/Product/addproduct">Add Product</a>
+	<a href="/task/public/Admin/Product/addproduct" class="navbar-brand">Add Product</a>
 	<br><br>
-	<table border="2">
+	<table class="table table-striped">
 		<tr>
 			<th>productName</th>
 			<th>urlKey</th>
