--- a/task/App/Views/admin/addnewcategory.html
+++ b/task/App/Views/admin/addnewcategory.html
@@ -2,7 +2,7 @@
 {% block body %}
 	<h1>Add Category</h1>
     <form method="POST" enctype="multipart/form-data">
-    <table border="2">
+    <table>
 	<tr>
         <td>Name :</td>
         <td><input type="text" name="CategoryName" value={{data.CategoryName}}></td>
@@ -17,7 +17,6 @@
     <tr><td>Discription :</td>
         <td><textarea name="description">{{data.description}}</textarea></td>
     </tr>
-    <!-- <input type="text" name="status" value={{data.status}}> -->
     <tr><td>Status :</td>
         <td><select name="status">
                 {% if 0 == data.status%}
