--- a/vehicleregistration/App/Views/Service/registration.html
+++ b/vehicleregistration/App/Views/Service/registration.html
@@ -4,12 +4,13 @@
     type="text/css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-    <script language="javascript">
+   
+   
+   <script language="javascript">
         $(document).ready(function () {
             $("#txtdate").datepicker({
                 dateFormat:'dd/mm/yy',
                 minDate: 1
-                
             });
         });
     </script>
@@ -17,6 +18,7 @@
 <body>   
 <h4>Registration form</h4>
     <form method="POST">
+        <input type="hidden" name="userid" value="{{data.userid}}">
         <table>
             <tr>    
                 <td>Title :</td>
